--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://archbaer-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1q4qp2fh0u0n.us-south.codeengine.appdomain.cloud/analyze/
+sentiment_analyzer_url=https://sentianalyzer.1q5m9b261sl3.us-south.codeengine.appdomain.cloud/
