--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://archbaer-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1q652kd4ynsn.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1q7jgr34modz.us-south.codeengine.appdomain.cloud/
